@@ -815,9 +815,19 @@ int zbar_scan_image (zbar_image_scanner_t *iscn,
         zbar_symbol_t **symp;
         for(symp = &syms->head; *symp; ) {
             zbar_symbol_t *sym = *symp;
-            if((sym->type < ZBAR_COMPOSITE && sym->type > ZBAR_PARTIAL) ||
+            if(sym->cache_count <= 0 &&
+               (sym->type < ZBAR_COMPOSITE && sym->type > ZBAR_PARTIAL) ||
 	       (sym->type == ZBAR_DATABAR || sym->type == ZBAR_DATABAR_EXP)) {
 	        if(filter && sym->quality < 4) {
+                    if(iscn->enable_cache) {
+                        /* revert cache update */
+                        zbar_symbol_t *entry = cache_lookup(iscn, sym);
+                        if(entry)
+                            entry->cache_count--;
+                        else
+                            assert(0);
+                    }
+
                     /* recycle */
                     *symp = sym->next;
                     syms->nsyms--;
@@ -825,10 +835,12 @@ int zbar_scan_image (zbar_image_scanner_t *iscn,
                     _zbar_image_scanner_recycle_syms(iscn, sym);
                     continue;
                 }
-                else if(sym->type > ZBAR_EAN5)
-                    nean++;
-                else
-                    naddon++;
+                else if(sym->type < ZBAR_COMPOSITE) {
+                    if(sym->type > ZBAR_EAN5)
+                        nean++;
+                    else
+                        naddon++;
+                }
             }
             symp = &sym->next;
         }
